<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_config"
    tools:context="com.taptester.tappapp.DialActivity">

    <TextView
        android:text="@string/hello_world"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phoneBook"
        android:id="@+id/openDialBTN"
        android:onClick="openAddress"
        android:layout_marginTop="73dp"
        android:layout_below="@+id/textView"
        android:background="@drawable/white_button"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@drawable/phonebutton"
        android:paddingLeft="10dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/editText"
        android:background="@drawable/custom_edittext"
        android:layout_below="@+id/openDialBTN"
        android:layout_marginTop="42dp"
        android:layout_alignRight="@+id/openDialBTN"
        android:layout_alignEnd="@+id/openDialBTN"
        android:layout_alignLeft="@+id/openDialBTN"
        android:layout_alignStart="@+id/openDialBTN"
        android:inputType="textPersonName"
        android:hint="@string/hintName"
        android:padding="9dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:inputType="phone"
        android:id="@+id/editText2"
        android:layout_below="@+id/editText"
        android:background="@drawable/custom_edittext"
        android:layout_marginTop="30dp"
        android:layout_alignRight="@+id/editText"
        android:layout_alignEnd="@+id/editText"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText"
        android:hint="@string/hintPhone"
        android:padding="9dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/saveButton"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:onClick="addConfig"
        android:background="@drawable/white_button"
        />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:background="@drawable/activity_top"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/relativeLayout">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/dialCustomization"
            android:id="@+id/textView3"
            android:textColor="#03AFE1"
            android:paddingLeft="20dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="85dp"
        android:background="#000"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/relativeLayout"
        android:layout_alignStart="@+id/relativeLayout"
        android:onClick="goBack"
        >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="35dp"
            android:id="@+id/imageView"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/back"/>
    </RelativeLayout>

</RelativeLayout>
