<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_config"
    tools:context="com.taptester.tappapp.DialActivity">



    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:background="@drawable/activity_top"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/relativeLayout">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/title_activity_gpsrecord"
            android:id="@+id/textView3"
            android:textColor="#03AFE1"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>



    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout"
        android:layout_centerHorizontal="true"
        android:id="@+id/relativeLayout3"
        android:layout_above="@+id/relativeLayout2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/addressTxtGesture"
                android:id="@+id/textView5"
                android:textColor="#FFF"
                android:textSize="16sp"
                android:layout_above="@+id/textView6"
                android:layout_alignRight="@+id/textView6"
                android:layout_alignEnd="@+id/textView6" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/afterSavingTxt"
            android:id="@+id/textView6"
            android:textColor="#FFF"
            android:textSize="16sp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:id="@+id/editText"
            android:background="@drawable/custom_edittext"
            android:hint="@string/addressHere"
            android:padding="9dp"
            android:inputType="textPostalAddress"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="300dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/saveButton"
            android:onClick="addConfig"
            android:background="@drawable/white_button"
            android:layout_toEndOf="@+id/textView"
            android:layout_below="@+id/textView6"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="37dp" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="85dp"
        android:background="#000"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/relativeLayout"
        android:layout_alignStart="@+id/relativeLayout"
        android:onClick="goBack"
        android:id="@+id/relativeLayout2">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="35dp"
            android:id="@+id/imageView"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/back"/>
    </RelativeLayout>




</RelativeLayout>
