<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:background="@drawable/background"
    tools:context="com.taptester.tappapp.MainActivity$PlaceholderFragment">


    <ImageView
        android:id="@+id/tapObject"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="fitCenter"
        android:src="@drawable/object"
        android:layout_centerVertical="true"
        android:onClick="checkTap"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>

    <ImageView
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:id="@+id/imageView1"
        android:scaleType="fitCenter"
        android:src="@drawable/circle1"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:scaleType="fitCenter"
        android:src="@drawable/circle2"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView3"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:scaleType="fitCenter"
        android:src="@drawable/circle3"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView4"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:scaleType="fitCenter"
        android:src="@drawable/circle4"
        android:onClick="checkTap"
        />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/relativeLayout">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="50dp"
            android:layout_height="20dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/settings_button"
            android:id="@+id/buttonConfig"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:drawableLeft="@drawable/info_icon"
            android:drawableStart="@drawable/info_icon"
            android:layout_marginLeft="5dp"
            android:background="@drawable/infobutton"
            android:paddingRight="10dp"
            android:text="Kippod Apps"
            android:textColor="#FFF"
            android:textSize="12sp"
            android:fontFamily="sans-serif-condensed"
            android:id="@+id/buttonInfo"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:drawableTop="@drawable/share"
            android:paddingTop="5dp"
            android:background="#343434"
            android:id="@+id/shareBtn"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:id="@+id/textLayout"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="visible"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/modeText"
            android:textColor="#FFF"
            android:textSize="35sp"
            android:id="@+id/textView2"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tapText"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:textSize="40sp"
            android:id="@+id/textView3"
            android:layout_above="@+id/textView2"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/keepYourEyes"
            android:id="@+id/textView4"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/gpsSPEED"
        android:textColor="#FFF"
        android:id="@+id/gps_info"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Version 2.13"
        android:textColor="#FFF"
        android:id="@+id/textView5"
        android:visibility="visible"
        android:layout_above="@+id/imageView1"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
